apps/healthmap-heart-sayings/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthmap-heart-sayings
  namespace: healthmap-heart-sayings
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - healthmap.nightingaleheart.com
      secretName: healthmap-heart-sayings-tls
    - hosts:
        - healthmap.mlthrive.com
      secretName: healthmap-heart-sayings-mlthrive-tls
  rules:
    - host: healthmap.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthmap-heart-sayings
                port:
                  number: 5001
    - host: healthmap.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthmap-heart-sayings
                port:
                  number: 5001
